--- a/templates/index.html
+++ b/templates/index.html
@@ -2,21 +2,20 @@
 
 {% block content %}
   <div class="container">
-    <h1>Letter Details</h1>
+    <div class="row">
+      <div id="hero-image"></div>
 
-    <div class="letter-details">
-      <p><strong>Name:</strong> {{ letter.name }}</p>
-      <p><strong>Title:</strong> {{ letter.title }}</p>
-      <p><strong>Creation Date:</strong> {{ letter.creation_date }}</p>
-      <p><strong>Text:</strong></p>
-      <p>{{ letter.text }}</p>
+      <div class="home-buttons">
+        {% if user.is_authenticated %}
+        <a href="{% url 'letter_list' %}" class="btn btn-primary">Wtite Santa!</a>
+        {% else %}
+        <a class="btn btn-primary" id="register-btn-main" 
+          href="{% url 'account_signup' %}">Register</a>
+      
+        <a class="btn btn-primary" href="{% url 'account_login' %}"  id="login-btn-main">Login</a>
+        {% endif %}
+      </div>
+      <!-- <a href="{% url 'letter_list' %}" class="btn btn-primary">Back to Letters</a> -->
     </div>
-
-    <hr>
-    <div class="user-details">
-      <p><strong>Written by:</strong> {{ letter.user.username }}</p>
-    </div>
-
-    <a href="{% url 'letter_list' %}" class="btn btn-primary">Back to Letters</a>
   </div>
 {% endblock %}
