--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,6 @@
         <!-- Dynamic Content Block -->
         {% block content %}
         {% endblock %}
-
     </main>
 
     <!-- Footer -->
@@ -56,5 +55,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'app.js' %}"></script>
   
-
+</body>
 </html>
