--- a/static/style.css
+++ b/static/style.css
@@ -90,13 +90,18 @@ li {
 
 .home-buttons {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin-top: 30px;
+}
+
+.home-buttons .btn {
+    margin: 10px 0;
 }
 
 #register-btn-main, 
 #login-btn-main {
-    margin: 0 20px;
+    margin: 20px;
     background-color: #aff1ff !important;
     color: red !important;
     font-weight: bold;
