--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -29,7 +29,7 @@
   
           <!-- Write to Santa Link -->
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'account_signup' %}">Write to Santa</a>
+            <a class="nav-link" href="{% url 'write_to_santa' %}">Write to Santa</a>
           </li>
 
           {% if user.is_authenticated %}
