--- a/santas_store/templates/santas_store/write_to_santa.html
+++ b/santas_store/templates/santas_store/write_to_santa.html
@@ -2,11 +2,14 @@
 
 {% block content %}
 
-    <h1>Write Your Letter to Santa</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Send Letter</button>
-    </form>
+    
+    <div class="text-center mt-5">
+        <h1>Write Your Letter to Santa</h1>
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary">Send Letter</button>
+        </form>
+    </div>
 
 {% endblock %}
